bluec-tests/tests/invalid/types_bool/fun_name.c
int _Bool(void) {
    return 4;
}

int main(void){
    return _Bool();
}